Fix a bug in generating building orders for replay files. And more detailed readme file

--- a/sc2analyzer/sc2search.ini
+++ b/sc2analyzer/sc2search.ini
@@ -11,16 +11,27 @@ db_path=replays.db
 
 ; Terran Vs. Protoss: Terran player uses a fast expansion strategy via the following build order: 
 ; Supply Depot, Barrack, and then second base.
-tvp_1bb_expansion = TVP: Supply Depot, Barrack, CommendCenter
+tvp_1bb_expansion = TVP: Supply Depot, Barracks, Commend Center
 
 ; Protoss Vs. Terran: Protoss player destroy/harass Terran player by Dark Templar rush. The definition of
 ; This strategy is constructing Dark Shrine before 7:00 in the game.
 ; Here '*' matches any number of buildings/technologies
-pvt_dt_rush = PVT: *, Dark Shrine within 7:00
+pvt_dt_rush = PVT: *, Dark Shrine within 8:00
 
 ; Protoss Vs any race: Protoss player rushes the enemy by building 4 gateways in the early game. 
 ; Here '* Pylon' matches any number of pylons including zero.
-protoss_4bg = PV*: Pylon, Gateway, Assimilator, Pylon, Cybernetics Core, * Pylon, 3 Gateway
+protoss_4bg = PV*: Pylon, Gateway, *, 3 Gateway within 5:00
+
+; More Strategies
+; Terran
+tvp_2base = TVP: Supply Depot, Commend Center
+tvz_2bb = TVZ: Supply Depot, 2 Barracks
+terran_cloaking_banshee = TV*: *, Cloaking Field within 8:00
+
+; Protoss
+pvt_2base = PVT: Pylon, Nexus
+pvt_blink = PVT: *, Blink within 7:00
+protoss_cannon_rush = PV*: Pylon, Forge, Pylon
 
 ; Develop your own strategy filters here
 ; Buildings/Technologies Reference:
